testsuite/gnatprove/tests/ug__ownership_annotations/test.out
 info: initialization of "X" proved
--> simple_ownership.adb:15:04

 error: "X" is not readable
--> simple_ownership.adb:23:25
   23 |       pragma Assert (Read (X)); -- Error, X has been moved
      |                            ^
      + object was moved at line 21 [E0010]
   21 |       Y := X;
      |            ^
      + launch "gnatprove --explain=E0010" for more information
ownership_annotations.gpr: error: [Ada Analysis] simple_ownership.adb (ownership_annotations.gpr) failed with status 5
gnatprove: error during flow analysis and proof
